<?xml version="1.0"?>
<package>
  <name>xnet_imu_rtqfusion</name>
  <version>0.0.1</version>
  <description>The xnet_imu_rtqfusion package converted to catkin</description>

  <maintainer email="author@163.com">author</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
 <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
 <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>


